// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReactionsRowButtonTooltip > renders the tooltip with formatted senders and caption 1`] = `
<div>
  <button
    aria-describedby="_r_2_"
  >
    👍 3
  </button>
</div>
`;

exports[`ReactionsRowButtonTooltip > renders the tooltip with many senders 1`] = `
<div>
  <button
    aria-describedby="_r_8_"
  >
    ❤️ 8
  </button>
</div>
`;
